# ewi-usb-config-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Akai EWI USB works in Linux -  USB MIDI commands.txt  ControllerSetupDefaults.syx  SensorSetupDefaults.syx  ewi-usb-notes.md
ewi_usb_config/: cli.py  ewidata.py
