[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ewi-usb-config-cli"
dynamic = ["version"]
description = 'Configure an Akai EWI USB MIDI wind controller via MIDI from the command line'
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Christopher Arndt", email = "chris@chrisarndt.de" },
]
license = "MIT"
keywords = [
    "akai",
    "ewi",
    "ewi usb",
    "wind controller",
    "midi",
    "sysex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "python-rtmidi~=1.5.8",
]


[project.urls]
Homepage = "https://github.com/SpotlightKid/ewi-usb-config-cli"
Source = "https://github.com/SpotlightKid/ewi-usb-config-cli"
Issues = "https://github.com/SpotlightKid/ewi-usb-config-cli/issues"


[project.scripts]
ewi-usb-config = "ewi_usb_config.cli:main"


[tool.hatch.version]
path = "ewi_usb_config/version.py"
pattern = "version = \"(?P<version>.*?)\""


[tool.hatch.build.targets.wheel]
packages = ["ewi_usb_config"]


[tool.hatch.build.targets.sdist]
exclude = [
  ".github",
]


[tool.hatch.envs.dev]
dependencies = [
    "black~=22.6.0",
    "isort~=5.10.1",
    "flakeheaven~=3.0.0",
]


[tool.hatch.envs.dev.scripts]
black = "black"
flake = "flakeheaven"


[tool.isort]
profile = "black"


[tool.flakeheaven]
format = "grouped"
max_line_length = 88
show_source = true


[tool.flakeheaven.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*"]
