[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ewi-usb-config-cli"
dynamic = ["version"]
description = 'Configure an Akai EWI USB MIDI wind controller via MIDI from the command line'
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Christopher Arndt", email = "chris@chrisarndt.de" },
]
license = "MIT"
keywords = [
    "akai",
    "ewi",
    "ewi usb",
    "wind controller",
    "midi",
    "sysex"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "python-rtmidi~=1.5.8",
]


[project.urls]
Homepage = "https://github.com/SpotlightKid/ewi-usb-config-cli"
Source = "https://github.com/SpotlightKid/ewi-usb-config-cli"
Issues = "https://github.com/SpotlightKid/ewi-usb-config-cli/issues"


[project.scripts]
ewi-usb-config = "ewi_usb_config.cli:main"


[tool.hatch.version]
path = "ewi_usb_config/version.py"
pattern = "version = \"(?P<version>.*?)\""


[tool.hatch.build.targets.wheel]
packages = ["ewi_usb_config"]


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]


[tool.hatch.envs.default.scripts]
euc = "ewi-usb-config {args}"


[tool.hatch.envs.dev]
dependencies = [
    "ruff",
]


[tool.hatch.envs.dev.scripts]
fmt = "ruff format {args:ewi_usb_config}"
check = "ruff check {args:ewi_usb_config}"


[tool.ruff]
line-length = 99

[tool.ruff.format]
skip-magic-trailing-comma = true
